# Comic-Crawler

./: .gitignore  CHANGELOG.md  HOW_TO_RELEASE.md  README.md  RELEASE.md  RELEASE_PLAN.md  end.bat  pyproject.toml  requirements.txt  start.bat
scripts/: start.py
src/jmcomic/: __init__.py  __main__.py  api.py  cl.py  jm_config.py  jm_gui_flet.py  jm_kavita.py  jm_option.py  jm_plugin.py
src/web_app/backend/: api_server.py  requirements.txt
src/web_app/frontend/: app.js  index.html
