[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comic-crawler"
version = "1.0.1"
description = "基于 Kavita UI 风格的现代化漫画下载器应用"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RSLN-creator"}
]
keywords = ["comic", "downloader", "jmcomic", "kavita"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
    "pydantic",
    "pydantic-settings",
    "httpx",
    "curl_cffi",
    "commonX",
    "PyYAML",
    "Pillow",
    "pycryptodome",
    "fastapi",
    "uvicorn",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "pyinstaller",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/RSLN-creator/Comic-Crawler"
Issues = "https://github.com/RSLN-creator/Comic-Crawler/issues"
Repository = "https://github.com/RSLN-creator/Comic-Crawler.git"

[project.scripts]
comic-crawler = "src.web_app.backend.api_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"web_app.frontend" = ["*.html", "*.js", "*.css"]
